--- a/src/components/bannerSection/assets/css/index.css
+++ b/src/components/bannerSection/assets/css/index.css
@@ -31,9 +31,8 @@
     padding-block: 32px;
     position: relative;
     font-family: var(--GT-Walsheim);
+
 }
-
-
 
 .bannerTxt h1 {
     font-size: 32px;
@@ -52,6 +51,11 @@
     font-weight: var(--font-weight-regular);
     margin-block: 20px;
     color: #CDCDCD;
+}
+
+#light .bannerTxt h1,
+#light .bannerTxt p {
+    color: var(--color-gray-100);
 }
 
 .bannerTxt-btn {
@@ -124,5 +128,75 @@
 @media only screen and (min-width:1400px) {
     .bannerTxt {
         max-width: 1390px;
+    }
+}
+
+/*  */
+#light #bannerWraper {
+    background-image: linear-gradient(to left, rgb(255, 0, 98, 0.2), rgb(255, 87, 34, 0.2), rgb(147, 102, 231, 0.2), rgb(3, 165, 214, 0.2));
+}
+
+#bannerBg {
+    background-repeat: no-repeat;
+    background-size: cover;
+    animation: change 10s infinite ease-in-out;
+}
+
+body,
+html {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100vh;
+    font-family: sans-serif;
+}
+
+@keyframes change {
+    0% {
+        background-image: url(../../assets/images/nfts-hero.png);
+    }
+
+    20% {
+        background-image: url(../../assets/images/nfts-hero2.png);
+    }
+
+    40% {
+        background-image: url(../../assets/images/nfts-hero3.png);
+    }
+
+    60% {
+        background-image: url(../../assets/images/nfts-hero4.png);
+    }
+
+    80% {
+        background-image: url(../../assets/images/nfts-hero5.png);
+    }
+
+    100% {
+        background-image: url(../../assets/images/nfts-hero6.png);
+    }
+
+    120% {
+        background-image: url(../../assets/images/nfts-hero7.png);
+    }
+
+    140% {
+        background-image: url(../../assets/images/nfts-hero.png);
+    }
+
+    160% {
+        background-image: url(../../assets/images/nfts-hero2.png);
+    }
+
+    180% {
+        background-image: url(../../assets/images/nfts-hero3.png);
+    }
+
+    200% {
+        background-image: url(../../assets/images/nfts-hero4.png);
+    }
+
+    210% {
+        background-image: url(../../assets/images/nfts-hero5.png);
     }
 }
