--- a/src/components/cardSection/assets/css/index.css
+++ b/src/components/cardSection/assets/css/index.css
@@ -18,6 +18,10 @@
     letter-spacing: -0.75;
 }
 
+#light .card-wrapper .heading h2 {
+    color: var(--color-gray-100);
+}
+
 .cardComponent {
     display: grid;
     grid-gap: 8px 0;
@@ -33,6 +37,11 @@
     grid-gap: 16px;
 }
 
+#light .card-border {
+    border: 1px solid var(--color-gray-30);
+
+}
+
 .candidateDetails {
     display: flex;
     justify-content: space-between;
@@ -44,6 +53,10 @@
     justify-content: center;
     align-items: center;
     color: var(--color-gray-10);
+}
+
+#light .candidateDetails div {
+    color: var(--color-gray-100);
 }
 
 .candidate-imgWrapper {
