--- a/src/components/footer/assets/css/footer.css
+++ b/src/components/footer/assets/css/footer.css
@@ -1,9 +1,13 @@
 .footer-wrapper {
-
     padding: 24px 0;
     border-top: 1px solid var(--btn-shadow-color);
     border-bottom: 1 px solid var(--btn-shadow-color);
     font-family: var(--GT-Walsheim);
+}
+
+#light .footer-wrapper {
+    border-top: 1px solid var(--color-gray-30);
+    border-bottom: 1 px solid var(--color-gray-30);
 }
 
 footer {
@@ -26,6 +30,11 @@ footer h1 {
     font-weight: var(--font-weight-normalBold);
 }
 
+#light footer h1,
+#light footer p {
+    color: var(--color-gray-100);
+}
+
 footer p {
     color: var(--white);
     font-size: 1.25rem;
@@ -46,6 +55,10 @@ footer .validate {
     border-radius: 15px;
 
     position: relative;
+}
+
+#light footer .validate {
+    background-color: var(--color-gray-20) !important;
 }
 
 .wrapTag-icons {
@@ -100,8 +113,13 @@ footer .validate input:focus {
 footer small {
     color: #CDCDCD;
     font-size: 0.875rem;
+    font-weight: 200;
     line-height: 1.5;
     letter-spacing: normal;
+}
+
+#light footer small {
+    color: #7A7A7A;
 }
 
 /* footer bottom */
@@ -121,12 +139,20 @@ footer small {
     padding-top: 44px;
 }
 
+#light .footer-icons {
+    border-top: 1px solid var(--color-gray-20);
+}
+
 .footer-icons li {
     list-style: none;
     padding: 4px 8px;
 }
 
 .footer-icons li a {
+    color: #cdcdcd;
+}
+
+#light .footer-icons li a {
     color: #cdcdcd;
 }
 
@@ -192,5 +218,14 @@ footer small {
     footer h1 {
         font-size: 56px;
         line-height: 1;
+    }
+
+    footer .validate {
+        height: 56px;
+    }
+
+    .input-btn {
+        height: 48px;
+        padding: 0 24px;
     }
 }
