--- a/src/index.css
+++ b/src/index.css
@@ -133,7 +133,18 @@
   --transition-02: .2s ease;
   --btn-shadow-color: rgba(255, 255, 255, 0.15);
   --border-color: rgba(131, 131, 131, 0.25);
+  --banner-bg: rgba(255, 255, 255, 0.05);
   --line-height-1: 1;
+}
+
+/* theme-color */
+#dark .home--wrapper {
+  max-width: 100%;
+  background-color: var(--color-gray-100);
+}
+
+#light .home--wrapper {
+  background-color: var(--white);
 }
 
 .flex {
@@ -142,9 +153,50 @@
   align-items: center;
 }
 
-.home--wrapper {
-  max-width: 100%;
-  background-color: var(--color-gray-100);
+.switch {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  z-index: 1000;
 }
 
 /* /root */
+
+/*  */
+.theme-container {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.5s;
+  cursor: pointer;
+  background-color: #909090;
+  transform: scale(.9);
+}
+
+.theme-container:hover {
+  background-color: #000000;
+  transform: scale(1.2);
+}
+
+.toggle-wrapper {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.toggle-sun:hover {
+  background-color: var(--white);
+}
+
+.toggle-moon:hover {
+  background-color: var(--black);
+}
